src/components/playlist-countdown/_playlist-countdown.scss
.player {

  .playlist-countdown {
    height: 72px;
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 16px;
    transform: translateY(0px);
    transition: transform ease-in 100ms, right 500ms 500ms, opacity 400ms, bottom 300ms;
    cursor: pointer;

    &.hidden {
      right: -160px;
      opacity: 0;
      .playlist-countdown-content-placeholder {
        .playlist-countdown-content-background {
          width: 0;
          .playlist-countdown-content {
            opacity: 0;
          }
        }
      }
    }

    &.canceled {
      bottom: -50px;
      opacity: 0;
    }

    .playlist-countdown-poster {
      width: 120px;
      height: inherit;
      float: left;
      border-radius: 4px 0 0 4px;
      background-size: contain;
      background-repeat: round;
    }

    .playlist-countdown-content-placeholder {
      width: 160px;
      height: inherit;
      float: right;

      .playlist-countdown-content-background {
        width: inherit;
        border-radius: 0 4px 3px 0;
        background-color: rgba(0, 0, 0, 0.7);
        height: inherit;
        transition: width 500ms 1000ms;

        .playlist-countdown-content {
          width: inherit;
          transition: opacity 300ms 1200ms;

          .playlist-countdown-text {
            width: 100%;
            padding: 10px;
            text-align: left;
            color: #fff;
            float: left;

            .playlist-countdown-text-title {
              font-size: 14px;
              font-weight: 400;
              margin-bottom: 12px;
              opacity: 0.7;
            }

            .playlist-countdown-text-name {
              font-size: 15px;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
              font-weight: 600;
            }
          }

          .playlist-countdown-cancel {
            position: absolute;
            top: 4px;
            right: 4px;
          }

          .playlist-countdown-indicator-bar {
            height: 4px;
            background-color: rgba(255, 255, 255, 0.3);
            position: absolute;
            bottom: 0;
            width: inherit;
            border-radius: inherit;

            .playlist-countdown-indicator-progress {
              max-width: 100%;
              height: 100%;
              background-color: rgba(255, 255, 255, 0.5);
              transition: width 400ms linear;
            }
          }
        }
      }
    }
  }

  &:not(.overlay-active) {
    &.state-paused,
    &.hover {
      .playlist-countdown {
        transform: translateY(-50px);
      }
    }
  }

  @media screen and (max-width: 767px) {
    .playlist-countdown {
      height: 54px;

      .playlist-countdown-poster {
        width: 96px;
      }

      .playlist-countdown-content-placeholder {
        width: 152px;

        .playlist-countdown-content-background {

          .playlist-countdown-content {

            .playlist-countdown-text {
              padding: 8px;

              .playlist-countdown-text-title {
                margin-bottom: 4px;
              }
            }

            .playlist-countdown-cancel {
              top: 0;
              right: 0;
            }
          }
        }
      }
    }
  }

  @media screen and (max-width: 479px) {
    .playlist-countdown {
      z-index: 1;
      height: 36px;
      margin: 8px;

      .playlist-countdown-poster {
        display: none;
      }

      .playlist-countdown-content-placeholder {
        width: 108px;

        .playlist-countdown-content-background {
          border-radius: 2px;

          .playlist-countdown-content {

            .playlist-countdown-text {
              width: 90%;
              padding: 3px 0 0 4px;

              .playlist-countdown-text-title {
                font-size: 12px;
                margin-bottom: 0;
              }

              .playlist-countdown-text-name {
                font-size: 12px;
                font-weight: 400;
              }
            }

            .playlist-countdown-cancel {
              width: 24px;
              height: 24px;
              margin-top: 3px;

              * {
                width: inherit;
                height: inherit;
              }
            }
          }
        }
      }
    }
  }
}

